<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.kasirku.admin.ui.LoginFragment"
        android:label="Login">
        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/nav_dashboard"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.kasirku.admin.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard" />

    <fragment
        android:id="@+id/nav_licenses"
        android:name="com.kasirku.admin.ui.license.LicenseListFragment"
        android:label="@string/licenses">
        <action
            android:id="@+id/action_licenses_to_generate"
            app:destination="@id/generateLicenseFragment" />
    </fragment>

    <fragment
        android:id="@+id/generateLicenseFragment"
        android:name="com.kasirku.admin.ui.license.GenerateLicenseFragment"
        android:label="@string/generate_license" />

    <fragment
        android:id="@+id/nav_stores"
        android:name="com.kasirku.admin.ui.customer.StoreListFragment"
        android:label="@string/stores" />

</navigation>
